syntax = "proto3";

import "laughing-server/proto/common/common.proto";

package share;

service Share{
    rpc GetTags(common.CommRequest) returns (TagReply) {}
    rpc AddShare(ShareRequest) returns (common.CommReply) {}
}

message TagInfo {
    int64 id = 1;
    string content = 2;
}

message TagReply {
    common.Head head = 1;
    repeated TagInfo infos = 2;
}

message ShareRequest {
    common.Head head = 1;
    string title = 2;
    string abstract = 3;
    string img = 4;
    string dst = 5;
    repeated int64 tags = 6;
    int64 origin = 7;
}
